--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
-
+*set_env.sh
 ###### both reactnd-contacts-complete and reactnd-contacts-server
 # dependencies
 node_modules
@@ -23,7 +23,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-###### reactnd-contacts-server
 www
 app.zip
 # Elastic Beanstalk Files
