--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-www
+*www
 app.zip
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+OLD_README.md
