--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,8 +48,7 @@ jobs:
       - run:
           name: Deploy App
           command: |
-            npm run api:deploy
-            npm run frontend:deploy
+            npm run deploy
             
 workflows:
   udagram:
