--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       - run:
           name: API Build
           command: |
-            npm run frontend:build
+            npm run api:build
   # deploy step will run only after manual approval
   deploy:
     docker:
